--- a/src/App.css
+++ b/src/App.css
@@ -159,11 +159,11 @@ h6 {
 .defaultHero,
 .roomsHero { 
   /* subtract -66px by the navbar height */
-  /* min-height: calc(100vh - 66px); 
+  min-height: calc(100vh - 66px); 
   background: url("./images/defaultBcg.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
 .roomsHero {
   background-image: url("./images/room-2.jpeg");
