--- a/src/App.css
+++ b/src/App.css
@@ -448,11 +448,11 @@ h6 {
 }
 /* end of single room*/
 /* roomlist */
-.roomslist {
+/* .roomslist {
   padding: 5rem 0;
-}
+} */
 .roomslist-center {
-  width: 80vw;
+  /* width: 80vw; */
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
@@ -460,7 +460,7 @@ h6 {
   grid-column-gap: 30px;
 }
 
-@media screen and (min-width: 776px) {
+/* @media screen and (min-width: 776px) {
   .roomslist-center {
     width: 90vw;
   }
@@ -470,12 +470,12 @@ h6 {
     width: 95vw;
     max-width: 1170px;
   }
-}
+} */
 /* end of roomlist */
 /*  rooms fitler*/
-.filter-container {
+/* .filter-container {
   padding: 5rem 0;
-}
+} */
 .filter-form {
   width: 60vw;
   margin: 0 auto;
@@ -512,7 +512,7 @@ h6 {
   font-size: 0.8rem;
   margin-left: 0.5rem;
 }
-@media screen and (min-width: 776px) {
+/* @media screen and (min-width: 776px) {
   .filter-form {
     width: 70vw;
   }
@@ -522,5 +522,5 @@ h6 {
     width: 95vw;
     max-width: 1170px;
   }
-}
+} */
 /* end of rooms fitler*/
