--- a/src/App.css
+++ b/src/App.css
@@ -96,13 +96,26 @@ h6 {
   left: 0;
   width: 100%;
   padding: 0.75rem 2rem;
-  background: var(--offWhite);
+  background: var(--mainBlack);
   z-index: 1;
 }
 .nav-header {
   display: flex;
   justify-content: space-between;
 }
+.nav-header a {
+  /* display: block; */
+  text-decoration: none;
+  /* padding: 1rem 0; */
+  color: var(--offWhite);
+  transition: var(--mainTransition);
+  text-align: center;
+  /* font-size: 1rem; */
+  /* font-weight: 600; */
+  /* letter-spacing: var(--mainSpacing); */
+  padding: 5px;
+  /* border: solid 1px var(--offWhite); */
+}  
 .nav-btn {
   background: transparent;
   border: none;
@@ -123,7 +136,7 @@ h6 {
   display: block;
   text-decoration: none;
   padding: 1rem 0;
-  color: var(--mainBlack);
+  color: var(--offWhite);
   transition: var(--mainTransition);
   text-align: center;
   font-size: 1rem;
@@ -143,13 +156,16 @@ h6 {
   }
   .nav-center {
     max-width: 1170px;
+    height: 100px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
   }
   .nav-links {
     height: auto;
     display: flex;
-    margin-left: 4rem;
   }
   .nav-links a {
     margin: 0 1rem;
@@ -163,7 +179,7 @@ h6 {
   /* subtract -66px by the navbar height */
   /* min-height: calc(100vh - 66px);  */
   height: 50vh;
-  background: url("./images/defaultBcg.jpeg") center/cover no-repeat;
+  background: url("./images/hotel-outdoor-fire-pit.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
