--- a/src/components/AboutYourStay.css
+++ b/src/components/AboutYourStay.css
@@ -14,6 +14,7 @@
 
 @media screen and (min-width: 776px) {
   .about-your-stay {
-    padding: 0 30px;
+    padding: 0 1rem;
+    max-width: 350px;
   }
 }
