--- a/src/components/CheckAvailibility.css
+++ b/src/components/CheckAvailibility.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .datepicker-wrapper {
@@ -17,9 +18,15 @@
   padding: 4px;
 }
 
+.form-control.check-avail {
+  background-color: white;
+}
+
 @media screen and (min-width: 776px) {
   .check-avail-wraper {
+    width: 80%;
+    max-width: 600px;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
   }
 }
