keep room button active style

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,21 @@ h6 {
   text-transform: uppercase;
   cursor: pointer;
 }
+.btn-underline {
+  display: inline-block;
+  text-decoration-color: var(--primaryColor);
+  /* letter-spacing: var(--mainSpacing); */
+  color: var(--mainBlack);
+  padding: 0 0.9rem;
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.btn-underline  p {
+  background: var(--mainWhite);
+  letter-spacing:normal;
+}
 .btn-primary:hover {
   background: transparent;
   color: var(--primaryColor);
@@ -483,7 +498,7 @@ h6 {
   /* width: 80vw; */
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-row-gap: 2rem;
   grid-column-gap: 30px;
 }
