--- a/src/App.css
+++ b/src/App.css
@@ -406,6 +406,7 @@ h6 {
   position: absolute;
   top: 50%;
   left: 50%;
+  text-align: center;
   transform: scale(0);
   transition: all 0.3s linear;
 }
@@ -537,8 +538,8 @@ h6 {
   border: solid 3px var(--mainBlack);
 }
 .filter-form {
-  width: 60vw;
-  margin: 0 auto;
+  /* width: 60vw; */
+  margin: 0 1rem;
   margin-bottom: 1rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(202px, 1fr));
